--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Dámské běžecké boty</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+				<link rel="stylesheet" type="text/css" href="style.css">
+				<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">				
     </head>
     <body>
 
@@ -44,7 +45,9 @@
                     Nike Air Zoom Pegasus 33 dokonale padne, dodá pocit rychlosti a má pružné tlumení, které ti umožní zrychlit tempo a soustředit se na rychlost.
                 </p>
 
-                <h2 class="parametr">Velikost</h2>
+								
+								
+								<h2 class="parametr">Velikost</h2>
 
                 <ul class="velikosti">
                     <li>35</li>
