--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <title>Dámské běžecké boty</title>
 				<link rel="stylesheet" type="text/css" href="style.css">
-				<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">				
+				<link href="https://fonts.googleapis.com/css?family=Roboto&amp;subset=latin-ext" rel="stylesheet">
+				
     </head>
     <body>
 
